force-app/main/default/objects/Lead/listViews/EAST_Lead.listView-meta.xml
<ListView>
    <fullName>EAST_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EAST</label>
    <queue>EAST</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>