force-app/main/default/objects/Lead/listViews/NORTH_Lead.listView-meta.xml
<ListView>
    <fullName>NORTH_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>NORTH</label>
    <queue>NORTH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>