force-app/main/default/objects/Lead/listViews/SOUTH_Lead.listView-meta.xml
<ListView>
    <fullName>SOUTH_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>SOUTH</label>
    <queue>SOUTH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>