force-app/main/default/objects/Lead/listViews/WEST_Lead.listView-meta.xml
<ListView>
    <fullName>WEST_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>WEST</label>
    <queue>WEST</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>